Add and Style About me

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <p></p>
       <p></p>
     </div>
-    <img src="imgs/dev-jane-02.jpg" alt="Jane leaning against a bus">
+    <img src="imgs/dev-jane-02.jpg" alt="Jane leaning against a bus" class="about-me__img">
   </section>
 
 
