Add technologies section

--- a/index.html
+++ b/index.html
@@ -102,14 +102,37 @@
 
   <!-- ===================== Technologies Section ============================-->
   <section class="section row container-fluid section--technologies">
-    <div class="col-xl-8">
-      hey
+    <div class="col-xl-8 row">
+      <div class="single-item col-sm-6 col-md-4 d-flex mx-auto justify-content-center align-items-center"><img src="./img/brands/logo1.png" alt="Brand-1 "></div>
+      <div class="single-item col-sm-6 col-md-4 d-flex mx-auto justify-content-center align-items-center"><img src="./img/brands/logo1.png" alt="Brand-1 "></div>
+      <div class="single-item col-sm-6 col-md-4 d-flex mx-auto justify-content-center align-items-center"><img src="./img/brands/logo1.png" alt="Brand-1 "></div>
+      <div class="single-item col-sm-6 col-md-4 d-flex mx-auto justify-content-center align-items-center"><img src="./img/brands/logo1.png" alt="Brand-1 "></div>
+      <div class="single-item col-sm-6 col-md-4 d-flex mx-auto justify-content-center align-items-center"><img src="./img/brands/logo1.png" alt="Brand-1 "></div>
+      <div class="single-item col-sm-6 col-md-4 d-flex mx-auto justify-content-center align-items-center"><img src="./img/brands/logo1.png" alt="Brand-1 "></div>
+      <div class="single-item col-sm-6 col-md-4 d-flex mx-auto justify-content-center align-items-center"><img src="./img/brands/logo1.png" alt="Brand-1 "></div>
+      <div class="single-item col-sm-6 col-md-4 d-flex mx-auto justify-content-center align-items-center"><img src="./img/brands/logo1.png" alt="Brand-1 "></div>
+      <div class="single-item col-sm-6 col-md-4 d-flex mx-auto justify-content-center align-items-center"><img src="./img/brands/logo1.png" alt="Brand-1 "></div>
     </div>
-    <div class="col-xl-4">
-      hey2
+    <div class="col-xl-4 subsection--experience">
+      <div class="years-of-experience">
+        <h3>7</h3>
+        <h4>Years<br/>Experience<br/>Working</h4>
+      </div>
+      <div class="cta-call">
+        <span><i class="fas fa-phone-alt fa-3x"></i></span>
+        <div class="call-now">
+            <a href="#" class="text-uppercase">Call Now</a>
+            <span class="">(+91)-800-555-4986</span>
+        </div>
+      </div>
     </div>
   </section>
   <!-- ===================== End Technologies Section ============================-->
+
+  <!-- ===================== Why-Us Technologies Section ============================-->
+
+  
+  <!-- ===================== End Why-Us Technologies Section ============================-->
 
 
 
