Style for larger display banner and about me section

--- a/index.html
+++ b/index.html
@@ -146,62 +146,88 @@
       <h5 class="text-center">You will find these qualities in all of our products</h5>
     </div>
     <div class="col-12 row">
-        <div class="single-item col-sm-6 col-md-4 col-lg-3">
-            <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-            <div class="card-body text-center">
-                <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
-                <p class="card-text text-secondary">
-                    Some quick example text to build on the card
-                    title and make up
-                    the bulk of the card's content.
-                </p>
-            </div>
-        </div>
-        <div class="single-item col-sm-6 col-md-4 col-lg-3">
-            <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-            <div class="card-body text-center">
-                <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
-                <p class="card-text text-secondary">
-                    Some quick example text to build on the card
-                    title and make up
-                    the bulk of the card's content.
-                </p>
-            </div>
-        </div>
-        <div class="single-item col-sm-6 col-md-4 col-lg-3">
-            <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-            <div class="card-body text-center">
-                <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
-                <p class="card-text text-secondary">
-                    Some quick example text to build on the card
-                    title and make up
-                    the bulk of the card's content.
-                </p>
-            </div>
-        </div>
-        <div class="single-item col-sm-6 col-md-4 col-lg-3">
-            <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-            <div class="card-body text-center">
-                <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
-                <p class="card-text text-secondary">
-                    Some quick example text to build on the card
-                    title and make up
-                    the bulk of the card's content.
-                </p>
-            </div>
-        </div>
-        <div class="single-item col-sm-6 col-md-4 col-lg-3">
-            <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-            <div class="card-body text-center">
-                <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
-                <p class="card-text text-secondary">
-                    Some quick example text to build on the card
-                    title and make up
-                    the bulk of the card's content.
-                </p>
-            </div>
-        </div>
 
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="single-item">
+              <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
+              <div class="card-body text-center">
+                  <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+                  <p class="card-text text-secondary">
+                      Some quick example text to build on the card
+                      title and make up
+                      the bulk of the card's content.
+                  </p>
+              </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="single-item">
+              <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
+              <div class="card-body text-center">
+                  <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+                  <p class="card-text text-secondary">
+                      Some quick example text to build on the card
+                      title and make up
+                      the bulk of the card's content.
+                  </p>
+              </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="single-item">
+            <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
+            <div class="card-body text-center">
+                <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+                <p class="card-text text-secondary">
+                    Some quick example text to build on the card
+                    title and make up
+                    the bulk of the card's content.
+                </p>
+            </div>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="single-item">
+          <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
+          <div class="card-body text-center">
+              <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+              <p class="card-text text-secondary">
+                  Some quick example text to build on the card
+                  title and make up
+                  the bulk of the card's content.
+              </p>
+          </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="single-item">
+          <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
+          <div class="card-body text-center">
+              <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+              <p class="card-text text-secondary">
+                  Some quick example text to build on the card
+                  title and make up
+                  the bulk of the card's content.
+              </p>
+          </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="single-item">
+        <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
+        <div class="card-body text-center">
+            <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+            <p class="card-text text-secondary">
+                Some quick example text to build on the card
+                title and make up
+                the bulk of the card's content.
+            </p>
+        </div>
+      </div>
+  </div>
+
+        
 
 
     </div>
