--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="col-12">
       <h2 class="section-title">Technologies</h2>
     </div>
-    <div class="col-xl-9 row">
+    <div class="col-xl-9 row technology-items">
       <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo1.png" alt="Brand-1 "></div></div>
       <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo2.png" alt="Brand-1 "></div></div>
       <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo3.png" alt="Brand-1 "></div></div>
