--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li class="nav-item active"><a class="nav-link" href="#">Services</a></li>
         <li class="nav-item active"><a class="nav-link" href="#">Portfolio</a></li>
         <li class="nav-item active"><a class="nav-link" href="#">Pages</a></li>
-        <li class="nav-item active"><a class="nav-link" href="#">Blog</a></li>
+        <li class="nav-item active"><a class="nav-link" href="/blog">Blog</a></li>
         <li class="nav-item active"><a class="nav-link" href="#">Contact</a></li>
       </ul>
     </div>
