--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stephane K.</title>
+  <title>Stephan K.</title>
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -11,7 +11,7 @@
 <body>
   <!-- ===================== Navigation Bar ============================-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"><h2 class="gradient-text">SK</h2></a>
+    <a class="navbar-brand" href="#"><h2 class="gradient-text">Stephan K</h2></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,11 +19,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <div class="mr-auto"></div>
       <ul class="navbar-nav">
-        <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-        <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
-        <li class="nav-item active"><a class="nav-link" href="#">Services</a></li>
+        <li class="nav-item active"><a class="nav-link" href="#">Resume</a></li>
         <li class="nav-item active"><a class="nav-link" href="#">Portfolio</a></li>
-        <li class="nav-item active"><a class="nav-link" href="#">Pages</a></li>
         <li class="nav-item active"><a class="nav-link" href="/blog">Blog</a></li>
         <li class="nav-item active"><a class="nav-link" href="#">Contact</a></li>
       </ul>
@@ -40,8 +37,8 @@
     </div>
     <div class="col-md-6 d-sm-flex justify-content-center align-items-center">
       <div class="">
-        <h1 class="title-text">Hey</h1>
-        <h2 class="title-text text-uppercase">I am Stephane</h2>
+        <h2 class="title-text">Hey,</h2>
+        <h1 class="title-text text-uppercase">I am Stephane</h1>
         <h4 class="title-text text-uppercase">Senior Web Developer<br/>Software/Electronic Engineer<br/>Data Science Enthusiast</h4>
         <div class="site-buttons">
             <div class="d-flex flex-column flex-sm-row justify-content-between justify-content-sm-start align-items-sm-center">
@@ -69,10 +66,10 @@
       </h2>
       <div>
         <h5 class="subtitle">
-            I solve Problems
+            I Solve Problems
         </h5>
         <p>
-            Hi, My name is Stephane. And I love to solve problems using technological tools. 
+            Hi, My name is Stephane. And I love solving problems using technological tools. 
             I have over 7 years of industry experience, working on various projects ranging from 
             embedded software to desktop applications and web development.
         </p>
@@ -88,9 +85,10 @@
             Blogger
         </h5>
         <p>
-            I believe that the best way of mastering a topic is by reflecting on and teaching what is learnt.
-            Thus I blog: I blog about topics I find fascinating like OOP and SOLID design principles. 
-            I blog about errors and lessons I have made in past and current projects. God knows there has been 
+            I believe that the best way of mastering a topic is by reflecting on and teaching what is learnt:
+            Thus I blog. <br/>I blog about topics I find fascinating like OOP and SOLID design principles, 
+            Functional Programming concepts in the different programming languages I use everyday. 
+            <br/>I blog about errors and lessons I have made in past and current projects. God knows there has been 
             quite a few of those. I blog about things I am learning and passionate about. 
         </p>
       </div>
@@ -108,15 +106,22 @@
       <h2 class="section-title">Technologies</h2>
     </div>
     <div class="col-xl-9 row technology-items">
-      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo1.png" alt="Brand-1 "></div></div>
-      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo2.png" alt="Brand-1 "></div></div>
-      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo3.png" alt="Brand-1 "></div></div>
-      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo4.png" alt="Brand-1 "></div></div>
-      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo5.png" alt="Brand-1 "></div></div>
-      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo6.png" alt="Brand-1 "></div></div>
-      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo7.png" alt="Brand-1 "></div></div>
-      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo8.png" alt="Brand-1 "></div></div>
-      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center h-18 p-5"><img class="" src="./img/brands/logo9.png" alt="Brand-1 "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo1.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo2.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo3.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo4.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo5.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo6.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo7.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo8.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo9.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo10.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo11.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo12.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo13.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo14.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo15.png" alt="Technology Icon "></div></div>
+      <div class="col-sm-6 col-md-4 col-lg-3"><div class="single-item d-flex mx-auto mx-sm-2 justify-content-center align-items-center p-5-"><img class="" src="./img/technologies/logo16.png" alt="Technology Icon "></div></div>
     </div>
     <div class="col-xl-3 d-flex align-items-center">
       <div class="d-flex w-100 flex-column align-items-stretch justify-content-between subsection--experience">
@@ -128,7 +133,7 @@
           <span class="text-primary"><i class="fas fa-phone-alt fa-3x"></i></span>
           <div class="call-now d-flex flex-column">
               <a href="#" class="text-uppercase">Call Now</a>
-              <span class="">(+91)-800-555-4986</span>
+              <span class="">(+27)76 2564 713</span>
           </div>
         </div>
       </div>
@@ -143,88 +148,66 @@
   <section class="section row container-fluid section--why-us">
     <div class="col-12 my-5 mb-8">
       <h2 class="section-title">Why Work With Me</h2>
-      <h5 class="text-center">You will find these qualities in all of our products</h5>
+      <h5 class="text-center">In addition to firmly believing in principles like the Occam's Razor, DRY, or KISS: </h5>
     </div>
     <div class="col-12 row">
 
 
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-sm-6 col-md-4 col-lg-3-">
             <div class="single-item">
-              <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-              <div class="card-body text-center">
-                  <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+              <div class="sevices-img text-center py-4"><img src="./img/services/s1.png" alt="Services-2"></div>
+              <div class="card-body text-center-">
+                  <h5 class="card-title text-uppercase font-roboto">Continuous Shifting Between Bigger Picture and Detailed Implementation</h5>
                   <p class="card-text text-secondary">
-                      Some quick example text to build on the card
-                      title and make up
-                      the bulk of the card's content.
+                    The development Activity must remain Customer-centric. 
+                    <br/>An adequate product will only be obtained by alternating 
+                    between the Bigger Picture and the Detailed Implementation. 
+                    <br/><br/>This also helps with Validation and Verification ensuring 
+                    that the product meets its requirements. 
                   </p>
               </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-sm-6 col-md-4 col-lg-3-">
             <div class="single-item">
               <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-              <div class="card-body text-center">
-                  <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+              <div class="card-body text-center-">
+                  <h5 class="card-title text-uppercase font-roboto">OOP, SOLID and FP principles for Efficiency, Maintainability and Speed </h5>
                   <p class="card-text text-secondary">
-                      Some quick example text to build on the card
-                      title and make up
-                      the bulk of the card's content.
+                    Code is not written for machines but for humans, 
+                    80% of the time code is looked at is after development is done. 
+                    <br/><br/>This calls for Software that complies with good practices 
+                    allowing maintainability, modularity, scalability, readability, and efficiency. 
                   </p>
               </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-sm-6 col-md-4 col-lg-3-">
           <div class="single-item">
-            <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-            <div class="card-body text-center">
-                <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+            <div class="sevices-img text-center py-4"><img src="./img/services/s3.png" alt="Services-2"></div>
+            <div class="card-body text-center-">
+                <h5 class="card-title text-uppercase font-roboto">Product Confidence Through Integrated Testing</h5>
                 <p class="card-text text-secondary">
-                    Some quick example text to build on the card
-                    title and make up
-                    the bulk of the card's content.
+                  The current context of Software Development promotes Short and consecutive Iterations of development. This enables many advantages such as faster feedback, for example.
+                  <br><br>Integrated Testing throughout the SLDC will certainly help QA build Product Confidence.
                 </p>
             </div>
           </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="col-sm-6 col-md-4 col-lg-3-">
         <div class="single-item">
-          <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-          <div class="card-body text-center">
-              <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+          <div class="sevices-img text-center py-4"><img src="./img/services/s4.png" alt="Services-2"></div>
+          <div class="card-body text-center-">
+              <h5 class="card-title text-uppercase font-roboto">Communication and Teamwork for Speed and Quality</h5>
               <p class="card-text text-secondary">
-                  Some quick example text to build on the card
-                  title and make up
-                  the bulk of the card's content.
+                Communication is the cornerstone of every team especially in the context of Software Development. 
+                <br/><br/>Effective communication with the diverse shareholders and within the team will enable Efficiency and Quality. 
               </p>
           </div>
         </div>
     </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="single-item">
-          <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-          <div class="card-body text-center">
-              <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
-              <p class="card-text text-secondary">
-                  Some quick example text to build on the card
-                  title and make up
-                  the bulk of the card's content.
-              </p>
-          </div>
-        </div>
-    </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <div class="single-item">
-        <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
-        <div class="card-body text-center">
-            <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
-            <p class="card-text text-secondary">
-                Some quick example text to build on the card
-                title and make up
-                the bulk of the card's content.
-            </p>
-        </div>
-      </div>
+
+
   </div>
 
         
