--- a/index.html
+++ b/index.html
@@ -589,7 +589,17 @@
 
 
   <footer>
-    <div><p>Copyright ©2019 All rights reserved</p></div>
+
+    <h2>Contact Me</h2>
+    <p>Want to chat? Or have you got a question/Suggestion? <br/>Drop me a message. I'm always happy to engage with the community</p>
+    <div class="d-flex justify-content-center">
+      <a href="https://github.com/KMurphs" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+      <a href="https://twitter.com/murphs_k" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/in/stephane-kibonge/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+      <a href="https://codepen.io/kmurphs" target="_blank" rel="noopener noreferrer"><i class="fab fa-codepen"></i></a>
+    </div>
+
+    <p>Copyright ©2020 All rights reserved</p>
   </footer>
 
   <script src="./js/jquery.3.4.1.js"></script>
