--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <h4 class="title-text text-uppercase">Senior Web Developer<br/>Software/Electronic Engineer<br/>Data Science Enthusiast</h4>
         <div class="site-buttons">
             <div class="d-flex flex-column flex-sm-row justify-content-between justify-content-sm-start align-items-sm-center">
-                <button type="button" class="btn btn-primary px-sm-5 text-uppercase mr-sm-4">hire me</button>
-                <button type="button" class="btn btn-secondary px-sm-5 text-uppercase">Get cv</button>
+                <button type="button" class="btn btn-primary px-sm-5 text-uppercase mr-sm-4 mt-2">hire me</button>
+                <button type="button" class="btn btn-secondary px-sm-5 text-uppercase mt-2">Get cv</button>
             </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
     <div class="col-12 row">
 
 
-        <div class="col-sm-6 col-md-4 col-lg-3-">
+        <div class="col-sm-6 col-md-4- col-lg-4">
             <div class="single-item">
               <div class="sevices-img text-center py-4"><img src="./img/services/s1.png" alt="Services-2"></div>
               <div class="card-body text-center-">
@@ -168,7 +168,7 @@
               </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3-">
+        <div class="col-sm-6 col-md-4- col-lg-4">
             <div class="single-item">
               <div class="sevices-img text-center py-4"><img src="./img/services/s2.png" alt="Services-2"></div>
               <div class="card-body text-center-">
@@ -182,7 +182,7 @@
               </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3-">
+        <div class="col-sm-6 col-md-4- col-lg-4">
           <div class="single-item">
             <div class="sevices-img text-center py-4"><img src="./img/services/s3.png" alt="Services-2"></div>
             <div class="card-body text-center-">
@@ -194,7 +194,7 @@
             </div>
           </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3-">
+      <div class="col-sm-6 col-md-4- col-lg-4">
         <div class="single-item">
           <div class="sevices-img text-center py-4"><img src="./img/services/s4.png" alt="Services-2"></div>
           <div class="card-body text-center-">
@@ -592,7 +592,7 @@
 
     <h2>Contact Me</h2>
     <p>Want to chat? Or have you got a question/Suggestion? <br/>Drop me a message. I'm always happy to engage with the community</p>
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center my-4">
       <a href="https://github.com/KMurphs" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
       <a href="https://twitter.com/murphs_k" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
       <a href="https://www.linkedin.com/in/stephane-kibonge/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
